--- a/PMS-PropertyHapa.Staff/Views/Tenant/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Tenant/Index.cshtml
@@ -296,9 +296,9 @@
     function showLoader() {
         var opts = {
             lines: 13,
-            length: 38,
-            width: 17,
-            radius: 45,
+            length: 20, // Adjusted length
+        width: 10,  // Adjusted width
+        radius: 30,
             scale: 1,
             corners: 1,
             color: '#000',
